<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAC9EC"
    tools:context= "com.example.rotational_figures.SecActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleFigure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="center_horizontal"
            android:text="@string/titleFigure"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/txt1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="enter radius"
            android:textSize="15sp"
            android:textStyle="italic"
            android:inputType="number" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/txt2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ed2"
            android:ems="10"
            android:text="0"
            android:hint="enter height"
            android:textSize="15sp"
            android:textStyle="italic"
            android:inputType="number"/>
    </TableRow>
        <TableRow
            android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

            <TextView
                android:id="@+id/txt5"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/txt5"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textStyle="bold" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ed5"
            android:text="0"
            android:ems="10"
            android:hint="enter radius"
            android:textSize="15sp"
            android:textStyle="italic"
            android:inputType="number"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt6"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/txt6"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black"
                android:textStyle="bold" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ed6"
            android:text="0"
            android:ems="10"
            android:hint="enter slant height"
            android:textSize="15sp"
            android:textStyle="italic"
            android:inputType="number"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt3"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/txt3"

            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ed3"
            android:ems="10"
            android:hint="value of area"
            android:textSize="15sp"
            android:textStyle="italic"
            android:inputType="number"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt4"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/txt4"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ed4"
            android:ems="10"
            android:hint="value of volume"
            android:textSize="15sp"
            android:textStyle="italic"
            android:inputType="number"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            style="@style/Widget.AppCompat.Button"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn2"
            style="@style/Widget.AppCompat.Button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnBack"
            android:text = "@string/btnBack"/>
    </TableRow>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="3dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtMsg"/>

        <ImageView
            android:id="@+id/imgPhoto"
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:layout_weight="1"
            android:layout_marginTop="260dp"
            android:layout_gravity="center"
            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>